add CRUD operations for products and prices list

--- a/ui/src/index.scss
+++ b/ui/src/index.scss
@@ -13,4 +13,13 @@
     height: 40px;
     background: $gray-600;
   }
+  .prices {
+    input {
+      box-shadow: none;
+    }
+  }
+  .priceForm {
+    flex-basis: 150px;
+    flex-shrink: 0;
+  }
 }
